# ViewAI-WebScraper

./: CMakeLists.txt  ErrorHandles.py  README.md  RequestExceptions.py  TODO.txt  WebScraper.py  XMLScraper.py  configuration_check.py  fread.c  simple_format_text.c  test.c  test.py  test_config.json  test_results.csv
Parser/: CMakeLists.txt  parser.cpp  parser.hpp  test.cpp
extras/: format_text_test  test.sh
python/: ErrorHandles.py  FormatText.py  WebScraper.py  XMLScraper.py  default_schema.json  test.py
random-c-code/: CMakeLists.txt  simple_format_text.c  simple_format_text.h  test.c
